--- a/.github/workflows/ep-merge.yml
+++ b/.github/workflows/ep-merge.yml
@@ -77,4 +77,4 @@ jobs:
           username: ${{ secrets.JENKINS_USER }}
           password: ${{ secrets.JENKINS_PASSWORD }}
           customHeaders: '{"Content-Type": "application/x-www-form-urlencoded"}'
-          data: '{"REPO_HTTP_URL": ${{ github.event.repository.html_url }}, "REPO_BRANCH": ${{ github.ref_name}}, "ASYNCAPI_FILE": ${{env.ASYNCAPI_FILE_PATH}}, "BUILD_ENV": "test"}'
+          data: '{"parameter": [{"REPO_HTTP_URL": ${{ github.event.repository.html_url }}, "REPO_BRANCH": ${{ github.ref_name}}, "ASYNCAPI_FILE": ${{env.ASYNCAPI_FILE_PATH}}, "BUILD_ENV": "test"}]}'
